master Update resume, about

--- a/about/index.html
+++ b/about/index.html
@@ -32,7 +32,7 @@ overview: true
             Harvard. Formerly a Wall Street options trader (silver and gold), an English teacher,
             and a motorcycle mechanic.
             </p>
-            <p>I'm also an inventor. I invented a Raspberry Pi device, powered
+            <p>I invented a Raspberry Pi device, powered
             by Nerves, which solves an industry-wide issue in data centers. So far over 5,000
             units of the prototype have sold.
            </p>
@@ -77,10 +77,11 @@ and spin wrenches on the best vehicles ever made, the 1986.5 - 1997 Nissan D21 H
             <div class="one-half last">
 
                 <h4>Hipster Operating Systems</h4>
-                <p>I like <a href="https://9p.io/plan9/">Plan 9</a>. How about using a Raspberry Pi as a work
-                machine? If you do that, you will want to encrypt your SD card, see how to do that with my 
-                Gist <a href="https://gist.github.com/mattjg908/9f56b7ace55cf923a93482df66369115">here</a>. I
-                use <a href="https://archlinux.org/">Arch</a>, btw...
+                <p>I like <a href="https://9p.io/plan9/">Plan 9</a>. <a href="https://inbox.vuxu.org/9front/EDBD57AF64B89A8BF8BC817BD0AFE9F3@felloff.net/T/#t">Here</a> is
+                my <a href="http://www.9front.org/propaganda/">9front</a> patch where I fixed GPIO pins 5 and 6 for the 9front Raspberry Pi kernel (revision 2 boards). How about using a Raspberry Pi as a work
+machine? If you do that, you will want to encrypt your SD card by following my 
+Gist <a href="https://gist.github.com/mattjg908/9f56b7ace55cf923a93482df66369115">here</a>. I
+use <a href="https://archlinux.org/">Arch</a>, btw...
 
                 <h4>Prototyping</h4>
                 <p>Here's my 3D printed Tiny Retro Macintosh computer.</p>
