--- a/about/index.html
+++ b/about/index.html
@@ -29,19 +29,17 @@ overview: true
             Hex packages like <a href="https://github.com/jeanparpaillon/elixir-snmp/pull/21">snmp-elixir</a>, and to <a
                                     href="https://github.com/nerves-project/nerves_examples/pull/222">Nerves</a>. I even have a few of <a href="https://github.com/mattjg908/st7735_elixir">my own
                                     libraries out there</a>! I have worked for a number of high profile clients such as Netflix, Google and
-            Harvard. Formerly a Wall Street options trader (silver and gold), an English teacher,
-            and a motorcycle mechanic.
+            Harvard. Formerly a Wall Street options trader (silver and gold), English teacher,
+            and motorcycle mechanic.
             </p>
-            <p>I invented a Raspberry Pi device, powered
-            by Nerves, which solves an industry-wide issue in data centers. So far over 5,000
+            <p>I invented a Nerves-powered Raspberry Pi device which solves an industry-wide issue in data centers. So far over 5,000
             units of the prototype have sold.
            </p>
 
-<p>Of course I need to step away from the computer from time to time... outside
+<p>I need to step away from the computer from time to time... outside
 of coding I do motorcycle stunts (<a href="https://youtu.be/1jLTRDY_gB4">dirtbike</a>,
 <a href="https://www.youtube.com/watch?v=3o0gy-JqgmQ&feature=youtu.be">msx</a>)
-and spin wrenches on the best vehicles ever made, the 1986.5 - 1997 Nissan D21 Hardbody.</p>
-
+and spin wrenches on vintage mini-trucks, specializing in the 1986.5 - 1997 Nissan D21 Hardbody.</p>
         </section>
 
         <section class="page-content clearfix">
@@ -68,23 +66,26 @@ and spin wrenches on the best vehicles ever made, the 1986.5 - 1997 Nissan D21 H
 
                 <h4>Erlang</h4>
                 <p>
-                Currently, I work at Erlang Solutions with industry greats such as Francesco Cesarini, Robert
-                Virding, and a number of other very talented Elixir and Erlang developers.
+                Currently, I work at the famous Erlang Solutions with industry greats, celebrity
+                programmers, kind-hearted, bright-minded, BEAM-loving, innovators. Lots of interesting
+                projects, currently I'm learning a lot about Kubernetes, AWS, Docker, and how the
+                BEAM and modern virtualization and containerization are a great match.
                 </p>
 
             </div>
 
             <div class="one-half last">
 
-                <h4>Hipster Operating Systems</h4>
-                <p>I like <a href="https://9p.io/plan9/">Plan 9</a>. <a href="https://inbox.vuxu.org/9front/EDBD57AF64B89A8BF8BC817BD0AFE9F3@felloff.net/T/#t">Here</a> is
-                my <a href="http://www.9front.org/propaganda/">9front</a> patch where I fixed GPIO pins 5 and 6 for the 9front Raspberry Pi kernel (revision 2 boards). How about using a Raspberry Pi as a work
+                <h4>Expanding Horizons</h4>
+                <p>I like Plan 9, 
+                <a href="https://inbox.vuxu.org/9front/EDBD57AF64B89A8BF8BC817BD0AFE9F3@felloff.net/T/#t">here</a> is
+                my 9front patch where I fixed GPIO pins 5 and 6 for the 9front Raspberry Pi kernel (revision 2 boards). How about using a Raspberry Pi as a work
 machine? If you do that, you will want to encrypt your SD card by following my 
 Gist <a href="https://gist.github.com/mattjg908/9f56b7ace55cf923a93482df66369115">here</a>. I
 use <a href="https://archlinux.org/">Arch</a>, btw...
 
                 <h4>Prototyping</h4>
-                <p>Here's my 3D printed Tiny Retro Macintosh computer.</p>
+                <p>My 3D printed Tiny Retro Macintosh computer, this and more can be your's:</p>
                 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Made a 3D printed, retro Tiny Mac. Perfect for fun with <a href="https://twitter.com/hashtag/elixir?src=hash&amp;ref_src=twsrc%5Etfw">#elixir</a> 1.14, <a href="https://twitter.com/hashtag/erlang?src=hash&amp;ref_src=twsrc%5Etfw">#erlang</a> OTP 25- who needs an M1 when you have Raspberry Pi Zeros!<br><br>Found the plans / stl files here: <a href="https://t.co/FHWoKi57oQ">https://t.co/FHWoKi57oQ</a> <a href="https://t.co/28euLUieMY">pic.twitter.com/28euLUieMY</a></p>&mdash; Galvatron (@mattjg908) <a href="https://twitter.com/mattjg908/status/1582792580332257280?ref_src=twsrc%5Etfw">October 19, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
 
