--- a/about/index.html
+++ b/about/index.html
@@ -26,11 +26,14 @@ overview: true
               CorpusBuilder Ruby
               Client Gem</a>, with contributions to <a
               href="https://github.com/elixir-lang/elixir-lang.github.com/pull/1560">Elixir-Lang</a>,
-            Hex packages like <a href="https://github.com/jeanparpaillon/elixir-snmp/pull/21">snmp-elixir</a>, and to <a
-                                    href="https://github.com/nerves-project/nerves_examples/pull/222">Nerves</a>. I even have a few of <a href="https://github.com/mattjg908/st7735_elixir">my own
-                                    libraries out there</a>! I have worked for a number of high profile clients such as Netflix, Google and
-            Harvard. Formerly a Wall Street options trader (silver and gold), English teacher,
-            and motorcycle mechanic.
+              <a href="https://github.com/nerves-project/nerves_examples/pull/222">Nerves</a>,
+              <a href="https://inbox.vuxu.org/9front/EDBD57AF64B89A8BF8BC817BD0AFE9F3@felloff.net/T/#t">9front (Plan 9 fork)</a>,
+            Hex packages like <a href="https://github.com/jeanparpaillon/elixir-snmp/pull/21">snmp-elixir</a>, and many others. I even have a few of <a href="https://github.com/mattjg908/st7735_elixir">my own
+                                    libraries out there</a>! 
+I have worked for a number of high profile clients such as Netflix, Google and
+ Harvard. My undergraduate degree is in Finance (<i>summa cum laude</i>), I am a former Wall Street 
+options floor trader of 5 years (silver and gold), an English teacher (in Viet Nam), and 
+a long-time motorcycle mechanic.
             </p>
             <p>I invented a Nerves-powered Raspberry Pi device which solves an industry-wide issue in data centers. So far over 5,000
             units of the prototype have sold.
