--- a/about/index.html
+++ b/about/index.html
@@ -33,7 +33,7 @@ overview: true
 I have worked for a number of high profile clients such as Netflix, Google and
  Harvard. My undergraduate degree is in Finance (<i>summa cum laude</i>), I am a former Wall Street 
 options floor trader of 5 years (silver and gold), an English teacher (in Viet Nam), and 
-a long-time motorcycle mechanic.
+long-time mechanic.
             </p>
             <p>I invented a Nerves-powered Raspberry Pi device which solves an industry-wide issue in data centers. So far over 5,000
             units of the prototype have sold.
@@ -42,7 +42,7 @@ a long-time motorcycle mechanic.
 <p>I need to step away from the computer from time to time... outside
 of coding I do motorcycle stunts (<a href="https://youtu.be/1jLTRDY_gB4">dirtbike</a>,
 <a href="https://www.youtube.com/watch?v=3o0gy-JqgmQ&feature=youtu.be">msx</a>)
-and spin wrenches on vintage mini-trucks, specializing in the 1986.5 - 1997 Nissan D21 Hardbody.</p>
+and spin wrenches on vintage mini-trucks, specializing in the Nissan D21 Hardbody.</p>
         </section>
 
         <section class="page-content clearfix">
@@ -88,7 +88,7 @@ Gist <a href="https://gist.github.com/mattjg908/9f56b7ace55cf923a93482df66369115
 use <a href="https://archlinux.org/">Arch</a>, btw...
 
                 <h4>Prototyping</h4>
-                <p>My 3D printed Tiny Retro Macintosh computer, this and more can be your's:</p>
+                <p>My 3D printed Tiny Retro Macintosh computer:</p>
                 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Made a 3D printed, retro Tiny Mac. Perfect for fun with <a href="https://twitter.com/hashtag/elixir?src=hash&amp;ref_src=twsrc%5Etfw">#elixir</a> 1.14, <a href="https://twitter.com/hashtag/erlang?src=hash&amp;ref_src=twsrc%5Etfw">#erlang</a> OTP 25- who needs an M1 when you have Raspberry Pi Zeros!<br><br>Found the plans / stl files here: <a href="https://t.co/FHWoKi57oQ">https://t.co/FHWoKi57oQ</a> <a href="https://t.co/28euLUieMY">pic.twitter.com/28euLUieMY</a></p>&mdash; Galvatron (@mattjg908) <a href="https://twitter.com/mattjg908/status/1582792580332257280?ref_src=twsrc%5Etfw">October 19, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
 
