--- a/about/index.html
+++ b/about/index.html
@@ -27,7 +27,7 @@ overview: true
               Client Gem</a>, with contributions to <a
               href="https://github.com/elixir-lang/elixir-lang.github.com/pull/1560">Elixir-Lang</a>,
               <a href="https://github.com/nerves-project/nerves_examples/pull/222">Nerves</a> (embedded Elixir),
-              <a href="https://inbox.vuxu.org/9front/EDBD57AF64B89A8BF8BC817BD0AFE9F3@felloff.net/T/#t">9front (Plan 9 fork)</a>,
+              <a href="https://inbox.vuxu.org/9front/EDBD57AF64B89A8BF8BC817BD0AFE9F3@felloff.net/T/#t">9front</a> (Plan 9 fork),
             Hex packages like <a href="https://github.com/jeanparpaillon/elixir-snmp/pull/21">snmp-elixir</a>, and many others. I even have a few of <a href="https://github.com/mattjg908/st7735_elixir">my own
                                     libraries out there</a>! 
 I have worked for a number of high profile clients such as Netflix, Google and
