--- a/about/index.html
+++ b/about/index.html
@@ -70,7 +70,7 @@ and spin wrenches on vintage mini-trucks, specializing in the Nissan D21 Hardbod
                 <h4>Erlang</h4>
                 <p>
                 Currently, I work at the famous Erlang Solutions with industry greats, celebrity
-                programmers, kind-hearted, bright-minded, BEAM-loving, innovators. Lots of interesting
+                programmers, kind-hearted, bright-minded, BEAM-loving innovators. Lots of interesting
                 projects, currently I'm learning a lot about Kubernetes, AWS, Docker, and how the
                 BEAM and modern virtualization and containerization are a great match.
                 </p>
