--- a/about/index.html
+++ b/about/index.html
@@ -75,18 +75,17 @@ and spin wrenches on vintage mini-trucks, specializing in the Nissan D21 Hardbod
                 BEAM and modern virtualization and containerization are a great match.
                 </p>
 
-            </div>
-
-            <div class="one-half last">
-
                 <h4>Expanding Horizons</h4>
                 <p>I like Plan 9, 
                 <a href="https://inbox.vuxu.org/9front/EDBD57AF64B89A8BF8BC817BD0AFE9F3@felloff.net/T/#t">here</a> is
                 my 9front patch where I fixed GPIO pins 5 and 6 for the 9front Raspberry Pi kernel (revision 2 boards). How about using a Raspberry Pi as a work
 machine? If you do that, you will want to encrypt your SD card by following my 
 Gist <a href="https://gist.github.com/mattjg908/9f56b7ace55cf923a93482df66369115">here</a>. I
-use <a href="https://archlinux.org/">Arch</a>, btw...
+use <a href="https://archlinux.org/">Arch</a>, btw...</p>
 
+            </div>
+
+            <div class="one-half last">
                 <h4>Prototyping</h4>
                 <p>My 3D printed Tiny Retro Macintosh computer:</p>
                 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Made a 3D printed, retro Tiny Mac. Perfect for fun with <a href="https://twitter.com/hashtag/elixir?src=hash&amp;ref_src=twsrc%5Etfw">#elixir</a> 1.14, <a href="https://twitter.com/hashtag/erlang?src=hash&amp;ref_src=twsrc%5Etfw">#erlang</a> OTP 25- who needs an M1 when you have Raspberry Pi Zeros!<br><br>Found the plans / stl files here: <a href="https://t.co/FHWoKi57oQ">https://t.co/FHWoKi57oQ</a> <a href="https://t.co/28euLUieMY">pic.twitter.com/28euLUieMY</a></p>&mdash; Galvatron (@mattjg908) <a href="https://twitter.com/mattjg908/status/1582792580332257280?ref_src=twsrc%5Etfw">October 19, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
