--- a/about/index.html
+++ b/about/index.html
@@ -115,24 +115,24 @@ use <a href="https://archlinux.org/">Arch</a>, btw...</p>
                 </li>
 
                 <li>
-                    <a href="https://www.stance.com/">
-                        <img src="/img/stance.png" alt="" />
+                    <a href="https://github.com/mattjg908/st7735_elixir">
+                        <img src="/img/st7735.png" alt="" />
                         <div class="caption">
                             <div>
-                                <h4>Stance</h4>
-                                <span>Node.js, Snapshot.js, Magento on Angular, Vagrant</span>
+                                <h4>ST7735</h4>
+                                <span>Elixir, Evision- support Pimorini Auto Hat (both ADC power chip and LCD display) in pure Elixir</span>
                             </div>
                         </div>
                     </a>
                 </li>
 
                 <li>
-                    <a href="http://www.google.com/earth/explore/showcase/liquidgalaxy.html">
-                        <img src="/img/lg.jpg" alt="" />
+                    <a href="http://www.infamousnissan.com/forum/forumdisplay.php?f=21">
+                        <img src="/img/before_after.jpg" alt="" />
                         <div class="caption">
                             <div>
-                                <h4>Google</h4>
-                                <span>Python, Rails, Angular</span>
+                                <h4>Timing Chain Kit</h4>
+                                <span>Full front of engine restoration</span>
                             </div>
                         </div>
                     </a>
