--- a/about/index.html
+++ b/about/index.html
@@ -32,8 +32,8 @@ overview: true
                                     libraries out there</a>! 
 I have worked for a number of high profile clients such as Netflix, Google and
  Harvard. My undergraduate degree is in Finance (<i>summa cum laude</i>), I am a former Wall Street 
-options floor trader of 5 years (silver and gold), an English teacher (in Viet Nam), and 
-long-time mechanic.
+options trader of 5 years (silver and gold) on the Mercantile Exchange trading floor in NYC, an English teacher (in Viet Nam), and 
+long-time mechanic (Jersey and Philly).
             </p>
             <p>I invented a Nerves-powered Raspberry Pi device which solves an industry-wide issue in data centers. So far over 5,000
             units of the prototype have sold.
