--- a/about/index.html
+++ b/about/index.html
@@ -128,7 +128,7 @@ use <a href="https://archlinux.org/">Arch</a>, btw...</p>
 
                 <li>
                     <a href="http://www.infamousnissan.com/forum/forumdisplay.php?f=21">
-                        <img src="/img/before_after.jpg" alt="" />
+                        <img src="/img/before_after.png" alt="" />
                         <div class="caption">
                             <div>
                                 <h4>Timing Chain Kit</h4>
