--- a/about/index.html
+++ b/about/index.html
@@ -29,14 +29,13 @@ overview: true
               <a href="https://github.com/nerves-project/nerves_examples/pull/222">Nerves</a> (embedded Elixir),
               <a href="https://inbox.vuxu.org/9front/EDBD57AF64B89A8BF8BC817BD0AFE9F3@felloff.net/T/#t">9front</a> (Plan 9 fork),
             Hex packages like <a href="https://github.com/jeanparpaillon/elixir-snmp/pull/21">snmp-elixir</a>, and many others. I even have a few of <a href="https://github.com/mattjg908/st7735_elixir">my own
-                                    libraries out there</a>! 
+                                    libraries</a>! 
+            </p>
+            <p>
 I have worked for a number of high profile clients such as Netflix, Google and
  Harvard. My undergraduate degree is in Finance (<i>summa cum laude</i>), I am a former Wall Street 
-options trader of 5 years (silver and gold) on the Mercantile Exchange trading floor in NYC, an English teacher (in Viet Nam), and 
-long-time mechanic (Jersey and Philly).
-            </p>
-            <p>I invented a Nerves-powered Raspberry Pi device which solves an industry-wide issue in data centers. So far over 5,000
-            units of the prototype have sold.
+options trader of 5 years (silver and gold) on the Mercantile Exchange trading floor in NYC, an English teacher, and 
+long-time mechanic. I invented a Nerves-powered Raspberry Pi device which solves an industry-wide issue in data centers. So far over 5,000 units of the prototype have sold.
            </p>
 
 <p>I need to step away from the computer from time to time... outside
