--- a/about/index.html
+++ b/about/index.html
@@ -56,22 +56,8 @@ and spin wrenches on vintage mini-trucks, specializing in the Nissan D21 Hardbod
                 <h4>Elixir</h4>
                 <p>When I interviewed for DockYard, Chris McCord (author of the
                 Phoenix framework) was one of the people who interviewed me.
-                Over the couple years that I worked there, collaborating with
+                Over the years that I worked there, collaborating with
                 the great Elxir team, I gained exposure to Elixir/Phoenix.
-                </p>
-
-                <h4>Embedded Software (Nerves, GRiSP)</h4>
-                <p>At Cato Digital (Virtual Power Systems) I
-                gained experience with embedded systems, which is what Erlang was 
-                originally designed for. 
-                </p>
-
-                <h4>Erlang</h4>
-                <p>
-                Currently, I work at the famous Erlang Solutions with industry greats, celebrity
-                programmers, kind-hearted, bright-minded, BEAM-loving innovators. Lots of interesting
-                projects, I'm learning a lot about Kubernetes, AWS, Docker, and how the
-                BEAM and modern virtualization and containerization are a great match.
                 </p>
 
                 <h4>Expanding Horizons</h4>
@@ -81,6 +67,19 @@ and spin wrenches on vintage mini-trucks, specializing in the Nissan D21 Hardbod
 machine? If you do that, you will want to encrypt your SD card by following my 
 Gist <a href="https://gist.github.com/mattjg908/9f56b7ace55cf923a93482df66369115">here</a>. I
 use <a href="https://archlinux.org/">Arch</a>, btw...</p>
+
+                <h4>Embedded Software (Nerves, GRiSP)</h4>
+                <p>At Cato Digital (Virtual Power Systems) I
+                gained experience with embedded systems.
+                </p>
+
+                <h4>Erlang</h4>
+                <p>
+                Currently, I work at the famous Erlang Solutions with industry greats, celebrity
+                programmers, kind-hearted, bright-minded, BEAM-loving innovators. Lots of interesting
+                projects, I'm learning a lot about Kubernetes, AWS, Docker, and how the
+                BEAM and modern virtualization and containerization are a great match.
+                </p>
 
             </div>
 
