--- a/about/index.html
+++ b/about/index.html
@@ -33,9 +33,8 @@ overview: true
             </p>
             <p>
 I have worked for a number of high profile clients such as Netflix, Google and
- Harvard. My undergraduate degree is in Finance (<i>summa cum laude</i>), I am a former Wall Street 
-options trader of 5 years (silver and gold) on the Mercantile Exchange trading floor in NYC, an English teacher, and 
-long-time mechanic. I invented a Nerves-powered Raspberry Pi device which solves an industry-wide issue in data centers. So far over 5,000 units of the prototype have sold.
+ Harvard. I am a former Wall Street 
+options trader of 5 years, English teacher, and mechanic. I invented a Nerves-powered Raspberry Pi device which solves an industry-wide issue in data centers. So far over 5,000 units of the prototype have sold.
            </p>
 
 <p>I need to step away from the computer from time to time... outside
