--- a/about/index.html
+++ b/about/index.html
@@ -15,7 +15,7 @@ overview: true
                 <a href="/img/matthewgalvinresume.pdf">Resume</a>
             </header>
 
-            <p>I'm a graduate student (Master of Science in Computer Science at Drexel Universit) 
+            <p>I'm a graduate student (MS in Computer Science) 
             with 10 years of software engineering experience. I enjoy all <a href="https://en.wikipedia.org/wiki/BEAM_(Erlang_virtual_machine)">BEAM</a> languages,
             currently my day job is Elixir, my passion is Erlang, and my hobby
             (not BEAM related) is the <a href="http://doc.cat-v.org/plan_9/programming/c_programming_in_plan_9">Plan 9 flavor of C</a>.
