--- a/about/index.html
+++ b/about/index.html
@@ -74,7 +74,7 @@ use <a href="https://archlinux.org/">Arch</a>, btw...</p>
 
                 <h4>Erlang</h4>
                 <p>
-                Currently, I work at the famous Erlang Solutions with industry greats, celebrity
+                Currently, I work at the world-famous Erlang Solutions with industry greats, celebrity
                 programmers, kind-hearted, bright-minded, BEAM-loving innovators. Lots of interesting
                 projects, I'm learning a lot about Kubernetes, AWS, Docker, and how the
                 BEAM and modern virtualization and containerization are a great match.
