master Try splitting [age in half

--- a/about/index.html
+++ b/about/index.html
@@ -97,69 +97,75 @@ use <a href="https://archlinux.org/">Arch</a>, btw...</p>
                 <span class="section-subtitle">Things that i am proud of</a></span>
             </header>
 
-            <ul class="projects-list clearfix">
+            <div class="one-half first">
+              <ul class="projects-list clearfix">
 
-                <li>
-                    <a href="https://github.com/mattjg908/st7735_elixir">
-                        <img src="/img/st7735.png" alt="" />
-                        <div class="caption">
-                            <div>
-                                <h4>ST7735</h4>
-                                <span>Elixir, Evision- support Pimorini Auto Hat (both ADC power chip and LCD display) in pure Elixir</span>
-                            </div>
-                        </div>
-                    </a>
-                </li>
+                  <li>
+                      <a href="https://github.com/mattjg908/st7735_elixir">
+                          <img src="/img/st7735.png" alt="" />
+                          <div class="caption">
+                              <div>
+                                  <h4>ST7735</h4>
+                                  <span>Elixir, Evision- support Pimorini Auto Hat (both ADC power chip and LCD display) in pure Elixir</span>
+                              </div>
+                          </div>
+                      </a>
+                  </li>
 
-                <li>
-                    <a href="https://github.com/jeanparpaillon/elixir-snmp/graphs/contributors">
-                        <img src="/img/pi.jpeg" alt="" />
-                        <div class="caption">
-                            <div>
-                                <h4>Prototyping</h4>
-                                <span>Raspberry Pi that speaks SNMP, Modbus, IPMI</span>
-                            </div>
-                        </div>
-                    </a>
-                </li>
+                  <li>
+                      <a href="https://github.com/jeanparpaillon/elixir-snmp/graphs/contributors">
+                          <img src="/img/pi.jpeg" alt="" />
+                          <div class="caption">
+                              <div>
+                                  <h4>Prototyping</h4>
+                                  <span>Raspberry Pi that speaks SNMP, Modbus, IPMI</span>
+                              </div>
+                          </div>
+                      </a>
+                  </li>
 
-                <li>
-                    <a href="http://www.infamousnissan.com/forum/forumdisplay.php?f=21">
-                        <img src="/img/before_after.png" alt="" />
-                        <div class="caption">
-                            <div>
-                                <h4>Timing Chain Kit</h4>
-                                <span>Full front of engine restoration</span>
-                            </div>
-                        </div>
-                    </a>
-                </li>
+                  <li>
+                      <a href="http://www.infamousnissan.com/forum/forumdisplay.php?f=21">
+                          <img src="/img/before_after.png" alt="" />
+                          <div class="caption">
+                              <div>
+                                  <h4>Timing Chain Kit</h4>
+                                  <span>Full front of engine restoration</span>
+                              </div>
+                          </div>
+                      </a>
+                  </li>
+              </ul>
 
-                <li>
-                    <a href="http://www.chopcult.com/default.php">
-                        <img src="/img/engine.png" alt="" />
-                        <div class="caption">
-                            <div>
-                                <h4>Yamaha</h4>
-                                <span>High revving points-based ignition swap on stock electronic ignition</span>
-                            </div>
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="http://www.infamousnissan.com">
-                        <img src="/img/dirtbike.jpeg" alt="" />
-                        <div class="caption">
-                            <div>
-                                <h4>1993 Nissan Hardbody</h4>
-                                <span>Done a lot of work to get it to this point
-                                :)</span>
-                            </div>
-                        </div>
-                    </a>
-                </li>
+            </div>
+            <div class="one-half last">
+              <ul class="projects-list clearfix">
+                  <li>
+                      <a href="http://www.chopcult.com/default.php">
+                          <img src="/img/engine.png" alt="" />
+                          <div class="caption">
+                              <div>
+                                  <h4>Yamaha</h4>
+                                  <span>High revving points-based ignition swap on stock electronic ignition</span>
+                              </div>
+                          </div>
+                      </a>
+                  </li>
+                  <li>
+                      <a href="http://www.infamousnissan.com">
+                          <img src="/img/dirtbike.jpeg" alt="" />
+                          <div class="caption">
+                              <div>
+                                  <h4>1993 Nissan Hardbody</h4>
+                                  <span>Done a lot of work to get it to this point
+                                  :)</span>
+                              </div>
+                          </div>
+                      </a>
+                  </li>
  
-            </ul>
+              </ul>
+            </div>
 
         </section>
 
