--- a/about/index.html
+++ b/about/index.html
@@ -69,7 +69,9 @@ use <a href="https://archlinux.org/">Arch</a>, btw...</p>
 
                 <h4>Embedded Software (Nerves, GRiSP)</h4>
                 <p>At Cato Digital (Virtual Power Systems) I
-                gained experience with embedded systems.
+                gained experience with embedded systems, specifically <a href="https://nerves-project.org/">Nerves</a> and <a href="https://www.grisp.org/">GRiSP</a>.
+                 I also became an expert in industrial communication through my exposure there to SNMP, Modbus, IPMI, ZMQ (not an industrial protocol) and a variety
+                  of Erlang libraries and tools to work with these protocols.
                 </p>
 
                 <h4>Erlang</h4>
