--- a/about/index.html
+++ b/about/index.html
@@ -34,7 +34,7 @@ overview: true
             <p>
 I have worked for a number of high profile clients such as Netflix, Google and
  Harvard. I am a former Wall Street 
-options trader of 5 years, English teacher, and mechanic. I invented a Nerves-powered Raspberry Pi device which solves an industry-wide issue in data centers. So far over 5,000 units of the prototype have sold.
+options trader of 5 years, English teacher, and mechanic. I invented a Nerves-powered Raspberry Pi device which solves an industry issue in data centers- so far over 5,000 units of the prototype have sold.
            </p>
 
 <p>I need to step away from the computer from time to time... outside
