--- a/about/index.html
+++ b/about/index.html
@@ -59,7 +59,7 @@ and spin wrenches on vintage mini-trucks, specializing in the Nissan D21 Hardbod
                 the great Elxir team, I gained exposure to Elixir/Phoenix.
                 </p>
 
-                <h4>Expanding Horizons</h4>
+                <h4>Operating Systems</h4>
                 <p>I like Plan 9, 
                 <a href="https://inbox.vuxu.org/9front/EDBD57AF64B89A8BF8BC817BD0AFE9F3@felloff.net/T/#t">here</a> is
                 my 9front patch where I fixed GPIO pins 5 and 6 for the 9front Raspberry Pi kernel (revision 2 boards). How about using a Raspberry Pi as a work
