--- a/about/index.html
+++ b/about/index.html
@@ -64,7 +64,7 @@ and spin wrenches on vintage mini-trucks, specializing in the Nissan D21 Hardbod
                 <a href="https://inbox.vuxu.org/9front/EDBD57AF64B89A8BF8BC817BD0AFE9F3@felloff.net/T/#t">here</a> is
                 my 9front patch where I fixed GPIO pins 5 and 6 for the 9front Raspberry Pi kernel (revision 2 boards). How about using a Raspberry Pi as a work
 machine? If you do that, you will want to encrypt your SD card by following my 
-Gist <a href="https://gist.github.com/mattjg908/9f56b7ace55cf923a93482df66369115">here</a>. I
+ <a href="https://gist.github.com/mattjg908/9f56b7ace55cf923a93482df66369115">gist</a>. I
 use <a href="https://archlinux.org/">Arch</a>, btw...</p>
 
                 <h4>Embedded Software (Nerves, GRiSP)</h4>
