--- a/about/index.html
+++ b/about/index.html
@@ -20,15 +20,15 @@ overview: true
             currently my day job is Elixir, my passion is Erlang, and my hobby
             (not BEAM related) is the <a href="http://doc.cat-v.org/plan_9/programming/c_programming_in_plan_9">Plan 9 flavor of C</a>.
             </p>
-            <p>I'm an open-source
-            contributor, author of Harvard University's <a
-              href="https://github.com/berkmancenter/corpusbuilder-ruby-client/blob/master/corpusbuilder-ruby.gemspec#L9">
-              CorpusBuilder Ruby
-              Client Gem</a>, with contributions to <a
+            <p>I'm a supported of open-source,
+             with contributions to <a
               href="https://github.com/elixir-lang/elixir-lang.github.com/pull/1560">Elixir-Lang</a>,
               <a href="https://github.com/nerves-project/nerves_examples/pull/222">Nerves</a> (embedded Elixir),
               <a href="https://inbox.vuxu.org/9front/EDBD57AF64B89A8BF8BC817BD0AFE9F3@felloff.net/T/#t">9front</a> (Plan 9 fork),
-            <a href="https://github.com/jeanparpaillon/elixir-snmp/pull/21">snmp-elixir</a> (Hex package), and many others. I even have a few of <a href="https://github.com/mattjg908/st7735_elixir">my own
+            <a href="https://github.com/jeanparpaillon/elixir-snmp/pull/21">snmp-elixir</a> (Hex package), and many others. I'm the author of Harvard University's <a
+              href="https://github.com/berkmancenter/corpusbuilder-ruby-client/blob/master/corpusbuilder-ruby.gemspec#L9">
+              CorpusBuilder Ruby
+              Client Gem</a> and I even have a few of <a href="https://github.com/mattjg908/st7735_elixir">my own
                                     libraries</a>! 
             </p>
             <p>
