--- a/about/index.html
+++ b/about/index.html
@@ -34,13 +34,13 @@ overview: true
             <p>
 I have worked for a number of high profile clients such as Netflix, Google and
  Harvard. I am a former Wall Street 
-options trader of 5 years, English teacher, and mechanic. I invented a Nerves-powered Raspberry Pi device which solves an industry issue in data centers- so far over 5,000 units of the prototype have sold.
+options trader of 5 years, English teacher, and mechanic. I invented a Nerves-powered Raspberry Pi device which solves a major issue in data centers- so far over 5,000 units of the prototype have sold.
            </p>
 
 <p>I need to step away from the computer from time to time... outside
 of coding I do motorcycle stunts (<a href="https://youtu.be/1jLTRDY_gB4">dirtbike</a>,
-<a href="https://www.youtube.com/watch?v=3o0gy-JqgmQ&feature=youtu.be">msx</a>)
-and spin wrenches on vintage mini-trucks, specializing in the Nissan D21 Hardbody.</p>
+<a href="https://www.youtube.com/watch?v=3o0gy-JqgmQ&feature=youtu.be">msx</a>),
+ spin wrenches on vintage compact pickups, and study Native American history.
         </section>
 
         <section class="page-content clearfix">
