--- a/about/index.html
+++ b/about/index.html
@@ -39,7 +39,7 @@ options trader of 5 years, English teacher, and mechanic. I invented a Nerves-po
 <p>I need to step away from the computer from time to time... outside
 of coding I do motorcycle stunts (<a href="https://youtu.be/1jLTRDY_gB4">dirtbike</a>,
 <a href="https://www.youtube.com/watch?v=3o0gy-JqgmQ&feature=youtu.be">msx</a>),
- spin wrenches on vintage compact pickups, and study Native American history.
+ spin wrenches on vintage compact pickups, and read Native American history.
         </section>
 
         <section class="page-content clearfix">
