--- a/about/index.html
+++ b/about/index.html
@@ -107,7 +107,7 @@ use <a href="https://archlinux.org/">Arch</a>, btw...</p>
                           <div class="caption">
                               <div>
                                   <h4>ST7735</h4>
-                                  <span>Elixir, Evision- support Pimorini Auto Hat (both ADC power chip and LCD display) in pure Elixir</span>
+                                  <span>Elixir, Evision- support Pimorini Auto Hat (both ADC for power reading and LCD for display) in pure Elixir</span>
                               </div>
                           </div>
                       </a>
