--- a/about/index.html
+++ b/about/index.html
@@ -28,7 +28,7 @@ overview: true
               href="https://github.com/berkmancenter/corpusbuilder-ruby-client/blob/master/corpusbuilder-ruby.gemspec#L9">
               CorpusBuilder Ruby
               Client Gem</a> and I have a few of <a href="https://github.com/mattjg908/st7735_elixir">my own
-                                    libraries</a>! 
+                                    libraries</a>.
             </p>
             <p>
 I have worked for a number of high profile clients such as Netflix, Google and
