--- a/about/index.html
+++ b/about/index.html
@@ -77,8 +77,8 @@ use <a href="https://archlinux.org/">Arch</a>, btw...</p>
                 <p>
                 Currently, I work at the world-famous Erlang Solutions with industry greats, celebrity
                 programmers, kind-hearted, bright-minded, BEAM-loving innovators. Lots of interesting
-                projects, I'm learning a lot about Kubernetes, AWS, Docker, and how the
-                BEAM and modern virtualization and containerization are a great match.
+                projects, I'm learning a lot about Kubernetes, AWS, Docker, and how to pair 
+                modern virtualization and containerization with the BEAM.
                 </p>
 
             </div>
