master Add ADI Gateway

--- a/about/index.html
+++ b/about/index.html
@@ -102,12 +102,24 @@ use <a href="https://archlinux.org/">Arch</a>, btw...</p>
               <ul class="projects-list clearfix">
 
                   <li>
-                      <a href="https://github.com/mattjg908/st7735_elixir">
-                          <img src="/img/st7735.png" alt="" />
+                      <a href="https://www.ti.com/lit/ds/symlink/ads1015.pdf">
+                          <img src="/img/adi_gateway.jpeg" alt="" />
                           <div class="caption">
                               <div>
-                                  <h4>ST7735</h4>
-                                  <span>Elixir, Evision- support Pimorini Auto Hat (both ADC for power reading and LCD for display) in pure Elixir</span>
+                                  <h4>ADI Gateway</h4>
+                                  <span>Elixir, Erlang, I2C, ZMQ</span>
+                              </div>
+                          </div>
+                      </a>
+                  </li>
+
+                  <li>
+                      <a href="https://github.com/jeanparpaillon/elixir-snmp/graphs/contributors">
+                          <img src="/img/pi.jpeg" alt="" />
+                          <div class="caption">
+                              <div>
+                                  <h4>Prototyping</h4>
+                                  <span>Raspberry Pi that speaks SNMP, Modbus, IPMI</span>
                               </div>
                           </div>
                       </a>
@@ -133,12 +145,24 @@ use <a href="https://archlinux.org/">Arch</a>, btw...</p>
               <ul class="projects-list clearfix">
 
                   <li>
-                      <a href="https://github.com/jeanparpaillon/elixir-snmp/graphs/contributors">
-                          <img src="/img/pi.jpeg" alt="" />
+                      <a href="https://github.com/mattjg908/st7735_elixir">
+                          <img src="/img/st7735.png" alt="" />
                           <div class="caption">
                               <div>
-                                  <h4>Prototyping</h4>
-                                  <span>Raspberry Pi that speaks SNMP, Modbus, IPMI</span>
+                                  <h4>ST7735</h4>
+                                  <span>Elixir, Evision- support Pimorini Auto Hat (both ADC for power reading and LCD for display) in pure Elixir</span>
+                              </div>
+                          </div>
+                      </a>
+                  </li>
+
+                  <li>
+                      <a href="https://www.ti.com/lit/ds/symlink/ads1015.pdf">
+                          <img src="/img/auto_hat.jpeg" alt="" />
+                          <div class="caption">
+                              <div>
+                                  <h4>ADC</h4>
+                                  <span>Elixir, Erlang, I2C</span>
                               </div>
                           </div>
                       </a>
