--- a/about/index.html
+++ b/about/index.html
@@ -107,7 +107,7 @@ use <a href="https://archlinux.org/">Arch</a>, btw...</p>
                           <div class="caption">
                               <div>
                                   <h4>ADI Gateway</h4>
-                                  <span>Elixir, Erlang, I2C, ZMQ</span>
+                                  <span>Elixir, Erlang, Custom Nerves System, I2C, ZMQ</span>
                               </div>
                           </div>
                       </a>
