--- a/about/index.html
+++ b/about/index.html
@@ -161,7 +161,7 @@ use <a href="https://archlinux.org/">Arch</a>, btw...</p>
                           <img src="/img/auto_hat.jpeg" alt="" />
                           <div class="caption">
                               <div>
-                                  <h4>ADC</h4>
+                                  <h4>Employs various formulas for voltage calculations based on hardware limits for sampling rates</h4>
                                   <span>Elixir, Erlang, I2C</span>
                               </div>
                           </div>
