--- a/about/index.html
+++ b/about/index.html
@@ -102,7 +102,7 @@ use <a href="https://archlinux.org/">Arch</a>, btw...</p>
               <ul class="projects-list clearfix">
 
                   <li>
-                      <a href="https://www.ti.com/lit/ds/symlink/ads1015.pdf">
+                      <a href="https://cdn.shopify.com/s/files/1/0174/1800/files/automation_hat_schematic.pdf?199375959460709850">
                           <img src="/img/adi_gateway.jpeg" alt="" />
                           <div class="caption">
                               <div>
