--- a/about/index.html
+++ b/about/index.html
@@ -161,8 +161,8 @@ use <a href="https://archlinux.org/">Arch</a>, btw...</p>
                           <img src="/img/auto_hat.jpeg" alt="" />
                           <div class="caption">
                               <div>
-                                  <h4>Employs various formulas for voltage calculations based on hardware limits for sampling rates</h4>
-                                  <span>Elixir, Erlang, I2C</span>
+                                  <h4>Pure Elixir/Erlang</h4>
+                                  <span>Employs various formulas for voltage calculations based on hardware limits for sampling rates</span>
                               </div>
                           </div>
                       </a>
