--- a/about/index.html
+++ b/about/index.html
@@ -119,7 +119,7 @@ use <a href="https://archlinux.org/">Arch</a>, btw...</p>
                           <div class="caption">
                               <div>
                                   <h4>Prototyping</h4>
-                                  <span>Raspberry Pi that speaks SNMP, Modbus, IPMI</span>
+                                  <span>Data center power orchestration simulation (servers, smart breakers, loads, etc) , comms via SNMP</span>
                               </div>
                           </div>
                       </a>
