--- a/about/index.html
+++ b/about/index.html
@@ -22,7 +22,7 @@ overview: true
             </p>
             <p>I have contributions into <a
               href="https://github.com/elixir-lang/elixir-lang.github.com/pull/1560">Elixir-Lang</a>,
-              <a href="https://github.com/nerves-project/nerves_examples/pull/222#issuecomment-964379991">Nerves</a> (embedded Elixir),
+              <a href="https://github.com/nerves-project/nerves_examples/commit/91f5e9f4df8f26481bef490c28152b489bfe00dd">Nerves</a> (embedded Elixir),
               <a href="https://inbox.vuxu.org/9front/EDBD57AF64B89A8BF8BC817BD0AFE9F3@felloff.net/T/#t">9front</a> (Plan 9 fork),
             <a href="https://github.com/jeanparpaillon/elixir-snmp/pull/21">snmp-elixir</a> (Hex package), and many others. I authored Harvard University's <a
               href="https://github.com/berkmancenter/corpusbuilder-ruby-client/blob/master/corpusbuilder-ruby.gemspec#L9">
