--- a/about/index.html
+++ b/about/index.html
@@ -20,6 +20,9 @@ overview: true
             currently my day job is Elixir, my passion is Erlang, and my hobby
             (not BEAM related) is the <a href="http://doc.cat-v.org/plan_9/programming/c_programming_in_plan_9">Plan 9 flavor of C</a>.
             </p>
+
+            <p>I invented a Nerves-powered Raspberry Pi device which solves a major issue in data centers- so far over 5,000 units of the prototype have sold, see a picture of it below.</p>
+
             <p>I have contributions into <a
               href="https://github.com/elixir-lang/elixir-lang.github.com/pull/1560">Elixir-Lang</a>,
               <a href="https://github.com/nerves-project/nerves_examples/commit/91f5e9f4df8f26481bef490c28152b489bfe00dd">Nerves</a> (embedded Elixir),
@@ -33,8 +36,7 @@ overview: true
             <p>
 I have worked for a number of high profile clients such as Netflix, Google and
  Harvard. I am a former Wall Street 
-options trader of 5 years, English teacher, and mechanic. I invented a Nerves-powered Raspberry Pi device which solves a major issue in data centers- so far over 5,000 units of the prototype have sold.
-           </p>
+options trader of 5 years, English teacher, and mechanic.</p>
 
 <p>I need to step away from the computer from time to time... outside
 of coding I do motorcycle stunts (<a href="https://youtu.be/1jLTRDY_gB4">dirtbike</a>,
@@ -51,6 +53,13 @@ of coding I do motorcycle stunts (<a href="https://youtu.be/1jLTRDY_gB4">dirtbik
 
             <div class="one-half first">
 
+                <h4>Embedded Software (Nerves, GRiSP)</h4>
+                <p>At Cato Digital (Virtual Power Systems) I
+                gained experience with embedded systems, specifically <a href="https://nerves-project.org/">Nerves</a> and <a href="https://www.grisp.org/">GRiSP</a>.
+                 I became an expert in industrial communication through my exposure to SNMP, Modbus, IPMI, ZMQ (not an industrial protocol) and a variety
+                  of Erlang libraries and tools to work with these protocols.
+                </p>
+
                 <h4>Elixir</h4>
                 <p>When I interviewed for DockYard, Chris McCord (author of the
                 Phoenix framework) was one of the people who interviewed me.
@@ -65,13 +74,6 @@ of coding I do motorcycle stunts (<a href="https://youtu.be/1jLTRDY_gB4">dirtbik
 machine? If you do that, you will want to encrypt your SD card by following my 
  <a href="https://gist.github.com/mattjg908/9f56b7ace55cf923a93482df66369115">gist</a>. I
 use <a href="https://archlinux.org/">Arch</a>, btw...</p>
-
-                <h4>Embedded Software (Nerves, GRiSP)</h4>
-                <p>At Cato Digital (Virtual Power Systems) I
-                gained experience with embedded systems, specifically <a href="https://nerves-project.org/">Nerves</a> and <a href="https://www.grisp.org/">GRiSP</a>.
-                 I became an expert in industrial communication through my exposure to SNMP, Modbus, IPMI, ZMQ (not an industrial protocol) and a variety
-                  of Erlang libraries and tools to work with these protocols.
-                </p>
 
                 <h4>Erlang</h4>
                 <p>
