--- a/about/index.html
+++ b/about/index.html
@@ -60,8 +60,16 @@ of coding I do motorcycle stunts (<a href="https://youtu.be/1jLTRDY_gB4">dirtbik
                   of Erlang libraries and tools to work with these protocols.
                 </p>
 
+                <h4>Erlang</h4>
+                <p>
+                Currently, I work at the world-famous Erlang Solutions with industry greats, celebrity
+                programmers, kind-hearted, bright-minded, BEAM-loving innovators. Lots of interesting
+                projects, I'm learning a lot about Kubernetes, AWS, Docker, and how to pair 
+                modern virtualization and containerization with the BEAM.
+                </p>
+
                 <h4>Elixir</h4>
-                <p>When I interviewed for DockYard, Chris McCord (author of the
+                <p>When I worked at DockYard, Chris McCord (author of the
                 Phoenix framework) was one of the people who interviewed me.
                 Over the years that I worked there, collaborating with
                 the great Elxir team, I gained exposure to Elixir/Phoenix.
@@ -75,14 +83,13 @@ machine? If you do that, you will want to encrypt your SD card by following my
  <a href="https://gist.github.com/mattjg908/9f56b7ace55cf923a93482df66369115">gist</a>. I
 use <a href="https://archlinux.org/">Arch</a>, btw...</p>
 
-                <h4>Erlang</h4>
-                <p>
-                Currently, I work at the world-famous Erlang Solutions with industry greats, celebrity
-                programmers, kind-hearted, bright-minded, BEAM-loving innovators. Lots of interesting
-                projects, I'm learning a lot about Kubernetes, AWS, Docker, and how to pair 
-                modern virtualization and containerization with the BEAM.
-                </p>
 
+            </div>
+
+            <div class="one-half last">
+                <h4>Hardware Hacking</h4>
+                <p>See my presentation on how to hack hardware with Simple Power Analysis. Demonstrates breaking RSA encryption with an oscilloscope. Presentation is
+                available <a href="https://docs.google.com/presentation/d/13RBVlxzd8dM_yB_70Rmzda348xZdte2t/edit?usp=sharing&ouid=104704378500619256091&rtpof=true&sd=true">here.</a></p>
             </div>
 
             <div class="one-half last">
