master Update about

--- a/about/index.html
+++ b/about/index.html
@@ -21,9 +21,12 @@ overview: true
             (not BEAM related) is the <a href="http://doc.cat-v.org/plan_9/programming/c_programming_in_plan_9">Plan 9 flavor of C</a>.
             </p>
 
-            <p>I invented a Nerves-powered Raspberry Pi device which solves a major issue in data centers- so far over 5,000 units of the prototype have sold, see a picture of it below.</p>
+            <p>I invented a Nerves-powered Raspberry Pi device which solves a major issue in data centers- so far over 5,000 units of the prototype have sold, see a picture of it below labelled "ADI Gateway".
+               <a href="https://docs.google.com/presentation/d/13RBVlxzd8dM_yB_70Rmzda348xZdte2t/edit?usp=sharing&ouid=104704378500619256091&rtpof=true&sd=true">Here</a></p> is a presentation I gave that shows
+               how to use an oscilliscope to break RSA encryption on an IoT device.
+            </p>
 
-            <p>I have contributions into <a
+            <p>My open source activities include contributions to <a
               href="https://github.com/elixir-lang/elixir-lang.github.com/pull/1560">Elixir-Lang</a>,
               <a href="https://github.com/nerves-project/nerves_examples/commit/91f5e9f4df8f26481bef490c28152b489bfe00dd">Nerves</a> (embedded Elixir),
               <a href="https://inbox.vuxu.org/9front/EDBD57AF64B89A8BF8BC817BD0AFE9F3@felloff.net/T/#t">9front</a> (Plan 9 fork),
@@ -38,10 +41,9 @@ I have worked for a number of high profile clients such as Netflix, Google and
  Harvard. I am a former Wall Street 
 options trader of 5 years, English teacher, and mechanic.</p>
 
-<p>I need to step away from the computer from time to time... outside
-of coding I do motorcycle stunts (<a href="https://youtu.be/1jLTRDY_gB4">dirtbike</a>,
+<p>When away from my computer you can find me doing motorcycle stunts (<a href="https://youtu.be/1jLTRDY_gB4">dirtbike</a>,
 <a href="https://www.youtube.com/watch?v=3o0gy-JqgmQ&feature=youtu.be">msx</a>),
- spin wrenches on vintage compact pickups, and read books on Native American history.
+ spinning wrenches, and reading books on Native American history.
         </section>
 
         <section class="page-content clearfix">
